--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ plugins {
     id "org.openapi.generator" version "7.10.0"
 }
 
-group = 'devstack'
+group = 'opendevstack'
 version = '0.0.1-SNAPSHOT'
 description = 'OpenDevStack Project to retrieve projects and azure groups for an authenticated user'
 
