[Improve-mocks] - Add new property to mock groups by user.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,6 +67,8 @@ mock:
   projects:
     default: ${MOCK_DEFAULT_PROJECTS}
     users: ${MOCK_USER_PROJECTS}
+  groups:
+    users: ${MOCK_USER_GROUPS}
 
 cluster:
   mapper:
