[Improve-mocks] - Anonimize samples.

--- a/src/main/resources/application-local.env.template
+++ b/src/main/resources/application-local.env.template
@@ -16,10 +16,10 @@ TESTING_HUB_API_PAGE_SIZE=100
 MOCK_CLUSTERS="US-TEST, CN, EU"
 MOCK_DEFAULT_PROJECTS="PROJECT-1:us-test, PROJECT-2-cn, PROJECT-3"
 MOCK_USER_PROJECTS="{PEPE:[PROJECT-3, PROJECT-4]; PPT:[PROJECT-3, PROJECT-5]}"
-MOCK_USER_GROUPS="{user@example.com:[BI-AS-ATLASSIAN-P-DEVSTACK-TEAM, BI-AS-ATLASSIAN-P-DEVSTACK-STAKEHOLDER]; PPT:[BI-AS-ATLASSIAN-P-EXAMPLE-TEAM]}"
+MOCK_USER_GROUPS="{user@example.com:[COMPANY-P-PROJECT-TEAM, COMPANY-P-PROJECT-STAKEHOLDER]; PPT:[COMPANY-P-PROJECT-TEAM]}"
 
 # Clusters mapper configuration
-CLUSTER_MAPPER_US_TEST="us-test"
+CLUSTER_MAPPER_US_TEST="us-test
 CLUSTER_MAPPER_EU="Europe, eu-aws-west1"
 CLUSTER_MAPPER_US="North America, us-aws-east1"
 CLUSTER_MAPPER_CN="China, prod-cn-aws-northwest1"
