--- a/src/test/resources/.env
+++ b/src/test/resources/.env
@@ -17,7 +17,7 @@ TESTING_HUB_API_PAGE_SIZE=100
 MOCK_CLUSTERS="US-TEST, CN, EU"
 MOCK_DEFAULT_PROJECTS="PROJECT-1:us-test, PROJECT-2-cn, PROJECT-3"
 MOCK_USER_PROJECTS="{PEPE:[PROJECT-3, PROJECT-4]; PPT:[PROJECT-3, PROJECT-5]}"
-MOCK_USER_GROUPS="{user@example.com:[BI-AS-ATLASSIAN-P-DEVSTACK-TEAM, BI-AS-ATLASSIAN-P-DEVSTACK-STAKEHOLDER]; PPT:[BI-AS-ATLASSIAN-P-EXAMPLE-TEAM]}"
+MOCK_USER_GROUPS="{user@example.com:[COMPANY-P-PROJECT-TEAM, COMPANY-P-PROJECT-STAKEHOLDER]; PPT:[COMPANY-P-EXAMPLE-TEAM]}"
 
 # Cache configuration
 CUSTOM_CACHE_TTL_SECONDS=3600 # seconds (1 hour)
