[Improve-mocks] - Add missing default conf.

--- a/src/main/resources/application-local.env.template
+++ b/src/main/resources/application-local.env.template
@@ -11,6 +11,7 @@ AZURE_DATA_HUB_GROUP_ID=<place-your-id-here> # BI-IS-Dataland-Datahub-PROD
 TESTING_HUB_API_URL=https://testinghub-api-dev.apps.eu-dev.ocp.aws.boehringer.com/v1/projects
 TESTING_HUB_API_TOKEN=<place-your-token-here>
 TESTING_HUB_API_PAGE_SIZE=100
+TESTING_HUB_DEFAULT_PROJECTS="PROJECT-1:1, PROJECT-2:2, PROJECT-3:3"
 
 # Mock data
 MOCK_CLUSTERS="US-TEST, CN, EU"
