[projects-whitelist] - Add new client for yml configuration.
quick win.

--- a/src/main/resources/application-local.env.template
+++ b/src/main/resources/application-local.env.template
@@ -57,3 +57,5 @@ PLATFORMS_EU_CLUSTER=eu-sections.yml?at=EDPC-3932-Implement-API-logic-that-retri
 PLATFORMS_US_CLUSTER=us-sections.yml?at=EDPC-3932-Implement-API-logic-that-retrieves-links-info-from-bitbucket
 PLATFORMS_CN_CLUSTER=cn-sections.yml?at=EDPC-3932-Implement-API-logic-that-retrieves-links-info-from-bitbucket
 PLATFORMS_INH_CLUSTER=inh-sections.yml?at=EDPC-3932-Implement-API-logic-that-retrieves-links-info-from-bitbucket
+
+PROJECTS_WHITELIST_CONFIGURATION_URL=https://bitbucket-dev.biscrum.com/projects/CATALOGS/repos/project-configurations/raw/ProjectsWhitelisted.yaml?at=refs/heads/master
