--- a/src/test/resources/.env
+++ b/src/test/resources/.env
@@ -25,3 +25,5 @@ CUSTOM_CACHE_MAXIMUM_SIZE=1000
 
 CUSTOM_CACHE_FALLBACK_TTL_SECONDS=7200 # seconds (2 hour)
 CUSTOM_CACHE_FALLBACK_MAXIMUM_SIZE=1000
+
+PROJECTS_WHITELIST_CONFIGURATION_URL=https://www.example.com/projects-whitelist
