[projects-whitelist] - Remove real urls from here, and update spring boot dependency.

--- a/src/main/resources/application-local.env.template
+++ b/src/main/resources/application-local.env.template
@@ -58,4 +58,4 @@ PLATFORMS_US_CLUSTER=us-sections.yml?at=EDPC-3932-Implement-API-logic-that-retri
 PLATFORMS_CN_CLUSTER=cn-sections.yml?at=EDPC-3932-Implement-API-logic-that-retrieves-links-info-from-bitbucket
 PLATFORMS_INH_CLUSTER=inh-sections.yml?at=EDPC-3932-Implement-API-logic-that-retrieves-links-info-from-bitbucket
 
-PROJECTS_WHITELIST_CONFIGURATION_URL=https://bitbucket-dev.biscrum.com/projects/CATALOGS/repos/project-configurations/raw/ProjectsWhitelisted.yaml?at=refs/heads/master
+PROJECTS_WHITELIST_CONFIGURATION_URL=https://bitbucket-example.com/ProjectsWhitelisted.yaml?at=refs/heads/master
