Feature/add projects whitelist
* [projects-whitelist] - Add new client for yml configuration.

quick win.

* [projects-whitelist] - Update logic to filter out projects when configuration is set.

* [projects-whitelist] - Simplify Configuration load from Ymls.

* [projects-whitelist] - Add unit tests.

* [projects-whitelist] - Add unit tests.

* [projects-whitelist] - Add unit tests.

* [projects-whitelist] - Add cache to request configuration.

* [projects-whitelist] - Remove real urls from here, and update spring boot dependency.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -139,8 +139,11 @@ openshift:
     project:
         url: /apis/project.openshift.io/v1/projects
 
+configuration:
+  repository:
+    bearer-token: ${PLATFORMS_BEARER_TOKEN}
+
 platforms:
-  bearer-token: ${PLATFORMS_BEARER_TOKEN}
   base-path: ${PLATFORMS_BASE_PATH}
   clusters:
     us-test: ${PLATFORMS_US_TEST_CLUSTER}
@@ -148,6 +151,11 @@ platforms:
     us-dev: ${PLATFORMS_US_CLUSTER}
     cn-dev: ${PLATFORMS_CN_CLUSTER}
     inh-dev: ${PLATFORMS_INH_CLUSTER}
+
+projects:
+  whitelist:
+    configuration:
+      url: ${PROJECTS_WHITELIST_CONFIGURATION_URL}
 
 security:
   group-validation:
