[projects-whitelist] - fix cache name.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -117,6 +117,9 @@ custom:
       testingHubGroups:
         ttl: ${CUSTOM_CACHE_FALLBACK_TTL_SECONDS}
         maxSize: ${CUSTOM_CACHE_FALLBACK_MAXIMUM_SIZE}
+      projectsWhitelisted:
+        ttl: ${CUSTOM_CACHE_FALLBACK_TTL_SECONDS}
+        maxSize: ${CUSTOM_CACHE_FALLBACK_MAXIMUM_SIZE}
 
 openshift:
   api:
