[platforms-cache] - Cache request to get platforms configuration.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -120,6 +120,9 @@ custom:
       projectsWhitelisted:
         ttl: ${CUSTOM_CACHE_FALLBACK_TTL_SECONDS}
         maxSize: ${CUSTOM_CACHE_FALLBACK_MAXIMUM_SIZE}
+      platformsConfigurationCache:
+        ttl: ${CUSTOM_CACHE_FALLBACK_TTL_SECONDS}
+        maxSize: ${CUSTOM_CACHE_FALLBACK_MAXIMUM_SIZE}
 
 openshift:
   api:
